# articles-api

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt  schema.prisma
src/: __init__.py  app.py  db.py
src/routes/: articles.py  auth.py  serve_redoc.py
src/util/: decorators.py  exceptions.py  jsonwebtoken.py
